Add ErrorProne
Ensures that the code is compiled with ErrorProne and fixes or
suppresses the errors reported.